<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box one</string>
    <string name="box_two">Box two</string>
    <string name="box_three">Box three</string>
    <string name="box_four">Box four</string>
    <string name="box_five">Box five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="how_to_play">How to play</string>
    <string name="tapBoxesAndBtns">Tap the screen and buttons</string>
</resources>
